--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       z-index: 2;
     }
     .cli::before {
-      content: "13Spookz@cyberpunk-terminal:~$";
+      content: "13Spookz@RedTeam-terminal:~$";
       color: #ff00cc;
       display: block;
       margin-bottom: 10px;
@@ -69,7 +69,7 @@
 </head>
 <body>
   <div class="cli">
-    <div class="typewriter">Welcome to 13Spookz37's Cyberpunk Lab - Status: [Under Construction]</div>
+    <div class="typewriter">Welcome to 13Spookz37's Github Lab - Status: [Under Construction]</div>
   </div>  <div class="preview-section">
     <h2>🔧 Projekte (Preview)</h2><div class="project">
   <h3>🔍 Recon & Scanning Tools</h3>
